fix: wordmark is not right aligned (#352)

--- a/components/src/patterns/footer/footer.scss
+++ b/components/src/patterns/footer/footer.scss
@@ -170,7 +170,7 @@
     );
     background-repeat: no-repeat;
     background-size: 117px;
-    background-position: center bottom;
+    background-position: right bottom;
     p {
       @include type-style('detail-02');
       color: var(--#{$prefix}-footer-main-copyright);
